# SimplePlatformersGame

./: CMakeLists.txt  Player.cpp  Player.h  bullet.cpp  bullet.h  main.cpp
